Fix header margin on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1491,8 +1491,8 @@ main
         padding-bottom: 1rem;
     }
 
-    .post-template .post-header {
-        padding: 40px 0;
+    .post-header {
+        padding: 30px 0;
     }
 
     h1 {
@@ -1521,8 +1521,11 @@ main
     }
 
     .post-template .post-header {
-        padding: 30px 0;
         margin-bottom: 0;
+    }
+
+    .post-excerpt p {
+      margin: 0;
     }
 }
 
